2010-05-22 Jens Thoms Toerring    <jt@toerring.de>

	* doc: Paul Nicholson put a lot of work into correcting
	all kinds of issue with the documentation!

	* lib/input.c: in some situations in a multi-line
	input object parts of the scrollbar were drawn even
	though no scrollbars were suposed to be shown.

	* lib/xyplot.c: Active xyplot was broken.

	* lib/box.c: If label is inside of box it's now clipped
	to the inside of the box and never draws outside of it.

2010-05-21 Jens Thoms Toerring    <jt@toerring.de>

	* doc: Many spelling errors etc. removed that Paul
	Nicholson had pointed out.

	* fdesign: deprecated values from alignment label menu
	in the form for editing object attributes removed.

	* lib/forms.c: Bug with resizing scrollbars on resize of
	form that Paul Nicholson pointed out fixed.

	* fdesign/fd_attribs.c: Another bug found by Paul Nicholson:
	when in changing the type of an object with childs and then
	undoing the change immediately ("Attributes" form still open
	and clicking "Cancel") fdesign crashed. Hopefully fixed now.

2010-05-19 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign: small changes (mostly to fd/ui_theforms.fd)
	to get rid of annoying flicker in the control window
	when adding a new object in the other window.

2010-05-18 Jens Thoms Toerring    <jt@toerring.de>

	lib/objects.c: Another bug found by Serge Bromow fixed:
	shortcuts with ALT key had stopped to work.

2010-05-17 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tbox.c: As Serge Bromow pointed out in the functions
	fl_set_browser_topline(), fl_set_browser_bottomline() and
	fl_set_browser_centerline() there was a missing check for
	the browser being empty, resulting in dereferencing a NULL
	pointer.

2010-05-15 Jens Thoms Toerring    <jt@toerring.de>

	* lib/handling.c, lib/include/Basic.h: After intensive
	discussions with Serge Bromow added new funtion that allows
	to switch back to the pre-1.0.91 behavior concerning when